implement kafka, jaeger, auto report telemetry

--- a/templates/.env
+++ b/templates/.env
@@ -3,8 +3,10 @@ ENV=local
 SERVICE_NAME={{ .ProjectName }}
 
 # --- SERVER ---
-PORT={{ .AppPort }}
-GRPC_PORT={{ .GrpcPort }}
+HTTP_PORT=8080
+GRPC_PORT=9090
+HTTP_PUBLIC_PORT={{ .AppPort }}
+GRPC_PUBLIC_PORT={{ .GrpcPort }}
 APP_MODE=all
 
 # --- DATABASE (MAIN) ---
@@ -25,10 +27,11 @@ WORKER_ENABLE_RESCUE=false
 
 
 # --- REDIS ---
-REDIS_ADDR={{ .ProjectName }}-redis:6379
+REDIS_ADDR=helix-shared-redis:6379
+REDIS_DB=5
 
 # --- KAFKA ---
-KAFKA_BROKERS={{ .ProjectName }}-redpanda:29092
+KAFKA_BROKERS=helix-shared-redpanda:29092
 
 #Durasi kunci idempotency disimpan di Redis
 IDEMPOTENCY_EXPIRY=1h
@@ -50,3 +53,6 @@ AUTH_JWKS_MAX_STALE=24h
 WORKER_BATCH_SIZE=50
 WORKER_POLL_INTERVAL=1s
 WORKER_CONCURRENCY=10
+
+OTEL_EXPORTER_OTLP_INSECURE=true
+OTEL_EXPORTER_OTLP_ENDPOINT=jaeger:4317
