--- a/templates/.github/workflows/ci.yml
+++ b/templates/.github/workflows/ci.yml
@@ -8,20 +8,19 @@ on:
 
 jobs:
   lint-and-test:
-    name: Lint & Test
+    name: Quality Gate
     runs-on: ubuntu-latest
     
+    # Service container for simple unit tests if needed
     services:
-      # Integration Test Dependency
       postgres:
         image: postgres:16-alpine
         env:
           POSTGRES_USER: dev
           POSTGRES_PASSWORD: dev
-          POSTGRES_DB: {{ .EntityPluralLower }}
+          POSTGRES_DB: ledgers
         ports:
           - 5432:5432
-        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -34,14 +33,15 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.22'
+          go-version: '1.24'
 
       - name: Install Tools
         run: |
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.55.2
           go install github.com/swaggo/swag/cmd/swag@latest
+          curl -sSf https://atlasgo.sh | sh
 
-      - name: Generate Code (Ent & Swag)
+      - name: Generate Code
         run: |
           go generate ./ent/...
           swag init -g cmd/server/main.go -o docs --parseDependency --parseInternal
@@ -52,30 +52,9 @@ jobs:
       - name: Lint
         run: golangci-lint run ./...
 
-      - name: Run Unit Tests
+      - name: Run Unit Tests (Fast)
         run: go test -v -race -short ./...
 
-      # Integration tests usually require specific env vars
-      # - name: Run Integration Tests
-      #   run: go test -v ./tests/integration/...
-      #   env:
-      #     DB_DSN: postgres://dev:dev@localhost:5432/{{ .EntityPluralLower }}?sslmode=disable
-      
-  build:
-    name: Build Docker Image
-    runs-on: ubuntu-latest
-    needs: lint-and-test
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        
-      - name: Build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false # Set to true if you add login steps
-          tags: user/app:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Run Integration Tests (E2E)
+        # Testcontainers will handle the DB instance automatically
+        run: go test -v ./tests/integration/...
