--- a/templates/docker-compose.infra.yml
+++ b/templates/docker-compose.infra.yml
@@ -126,11 +126,34 @@ services:
       - "4318:4318" # OTLP HTTP receiver
     networks:
       - helix-shared-net
+  # ==========================================
+  # SHARED MINIO (S3 Compatible Object Storage)
+  # ==========================================
+  minio:
+    image: minio/minio:latest
+    container_name: helix-shared-minio
+    command: server /data --console-address ":9301"
+    ports:
+      - "9300:9300" # API Port
+      - "9301:9301" # Web Console Port
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - minio-data:/data
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9300/minio/health/live" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    networks:
+      - helix-shared-net
 
 volumes:
   pg-data:
   redpanda-data:
   redis-data:
+  minio-data:
 
 
 networks:
