update, grpc with mTLS

--- a/templates/.env
+++ b/templates/.env
@@ -1,58 +1,93 @@
 # --- IDENTITY ---
-ENV=local
-SERVICE_NAME={{ .ProjectName }}
 
-# --- SERVER ---
+APP_ENV=local
+SERVICE_NAME={{ .ProjectName }}
+LOG_LEVEL=debug
+LOG_FORMAT=text
+STRICT_MODE=true
+
+# --- NETWORK ---
+
+APP_MODE=all
+ENABLE_HTTP=true
+ENABLE_GRPC=true
 HTTP_PORT=8080
 GRPC_PORT=9090
 HTTP_PUBLIC_PORT={{ .AppPort }}
 GRPC_PUBLIC_PORT={{ .GrpcPort }}
-APP_MODE=all
 
 # --- DATABASE (MAIN) ---
+
 DB_DSN=postgres://dev:dev@helix-shared-db:5432/{{ .EntityPluralLower }}?sslmode=disable
 DB_MAX_OPEN_CONNS=25
 DB_MAX_IDLE_CONNS=5
 
-# --- DATABASE (WORKER) ---
-# Leave empty to reuse DB_DSN
+# --- DATABASE (WORKER / BULKHEAD) ---
+
 WORKER_DB_DSN=postgres://dev:dev@helix-shared-db:5432/{{ .EntityPluralLower }}?sslmode=disable
-WORKER_DB_MAX_OPEN_CONNS=10
-WORKER_DB_MAX_IDLE_CONNS=2
+WORKER_DB_MAX_OPEN_CONNS=25
+WORKER_DB_MAX_IDLE_CONNS=5
+WORKER_DB_CONN_MAX_LIFETIME=15m
+
+# --- WORKER TUNING ---
+
 WORKER_CONCURRENCY=10
 WORKER_BATCH_SIZE=50
 WORKER_POLL_INTERVAL=200ms
 WORKER_ENABLE_RESCUE=false
 
-
-
 # --- REDIS ---
+
 REDIS_ADDR=helix-shared-redis:6379
+REDIS_PASSWORD=
 REDIS_DB=5
 
 # --- KAFKA ---
+
 KAFKA_BROKERS=helix-shared-redpanda:29092
 
-#Durasi kunci idempotency disimpan di Redis
-IDEMPOTENCY_EXPIRY=1h
-#console | kafka
+# --- TELEMETRY ---
+
+OTEL_EXPORTER_OTLP_ENDPOINT=helix-shared-observability:4317
+OTEL_EXPORTER_OTLP_INSECURE=true
+
+# --- AUTH ---
+
+AUTH_ENABLED=false
+AUTH_JWKS_URL=
+AUTH_ISSUER=
+AUTH_JWKS_REFRESH_INTERVAL=1h
+AUTH_JWKS_MAX_STALE=24h
+
+# --- AUDIT & IDEMPOTENCY ---
+
+# Output: console | kafka
+
 AUDIT_OUTPUT=kafka
 AUDIT_TOPIC=system.audit.events
 AUDIT_BUFFER_SIZE=100
+AUDIT_BLOCK_ON_FULL=false
+
+IDEMPOTENCY_EXPIRY=1h
+
+# --- HTTP mTLS ---
+
+HTTP_MTLS_ENABLED=false
+HTTP_MTLS_CA_CERT=certs/ca.crt
+HTTP_MTLS_SERVER_CERT=certs/server.crt
+HTTP_MTLS_SERVER_KEY=certs/server.key
 
 # --- AUTH ---
 AUTH_ENABLED=false
-#AUTH_JWKS_URL=
-#AUTH_ISSUER=
 AUTH_JWKS_REFRESH_INTERVAL=1h
 AUTH_JWKS_MAX_STALE=24h
 # AUTH_JWKS_URL=http://localhost:4444/.well-known/jwks.json
 # AUTH_ISSUER=http://localhost:4444/
 
-# --- WORKER TUNING ---
-WORKER_BATCH_SIZE=50
-WORKER_POLL_INTERVAL=1s
-WORKER_CONCURRENCY=10
 
-OTEL_EXPORTER_OTLP_INSECURE=true
-OTEL_EXPORTER_OTLP_ENDPOINT=jaeger:4317
+# --- GRPC mTLS ---
+
+GRPC_MTLS_ENABLED=false
+GRPC_MTLS_CA_CERT=certs/ca.crt
+GRPC_MTLS_SERVER_CERT=certs/server.crt
+GRPC_MTLS_SERVER_KEY=certs/server.key
